# pub_polycover

./: .gitignore  Cargo.toml  README.md
hardness/: README.md  search_hardness_gadget.py  verify_rust_candidates.py
hardness/rust_search/: Cargo.toml
hardness/rust_search/src/: main.rs
problem/5/: F.never  I.yes  T.never  Y.never
problem/6/: 3.never  N.never  P.yes  R.yes  S.never
solution/5/: I.txt  U.txt  V.txt  X.txt  Z.txt
solution/6/: 5.txt  8.txt  9.txt  B.txt  C.txt  D.txt  F.txt  P.txt  R.txt  T.txt  W.txt  Z.txt
solution/7/: 1110_0011_0001_0001.txt
src/: fs.rs  lib.rs  main.rs  profile.rs
src/check/: check.rs  mod.rs  placement.rs
src/data/: bit_poly.rs  board.rs  board_analyzer_symmetric.rs  connection.rs  cover1_queries.rs  cover2_queries.rs  cover2_queries_symmetric.rs  d4.rs  e2.rs  mod.rs  outline.rs  rect.rs  sparse_t2_query.rs  sparse_t2_rect.rs  t2_counter.rs  t2_masks.rs  tight_poly.rs  tree_poly.rs  u256.rs  vector.rs
src/solver/: expand_sa_solver.rs  mod.rs  parameters.rs  sa_solver.rs  sa_solver_symmetric.rs  trim.rs
src/solver/penalizer/: counting.rs  mod.rs  simple.rs  standard.rs  symmetric.rs
