[package]
name = "polycover2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argopt = "0.3.0"
colored = "2.0.4"
env_logger = "0.10.0"
fake-tty = "0.3.1"
log = "0.4.20"
petgraph = "0.6.4"
pprof = { version = "0.13.0", features = ["flamegraph", "protobuf-codec"] }
pretty_assertions = "1.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.8.0"

[profile.dev]
opt-level = 1

[build-dependencies]
cc = "1.0"
bindgen = "0.65.1"

[dev-dependencies]
criterion = "0.4"

[lib]
name = "polycover2"
path = "src/lib.rs"

[[bin]]
name = "polycover2"
path = "src/main.rs"
